--- a/HTML5-Drag-Drop/F9-v2.0.0-modules/fast-preview/000-xyz/css-black-scrollbar-bug/sidebar-ok.css
+++ b/HTML5-Drag-Drop/F9-v2.0.0-modules/fast-preview/000-xyz/css-black-scrollbar-bug/sidebar-ok.css
@@ -2,10 +2,6 @@
 
 /* @import url('./common/reset.css'); */
 
-@import url("./common/hs-scrollbar.css");
-
-/* @import url("./common/scrollbar.css"); */
-
 
 /* @import url("../common/module.css"); */
 
@@ -554,6 +550,57 @@ div.h5-dnd-icon-box:nth-of-type(0) {
     float: left;
 }
 
+
+/* scrollbar width 10*/
+
+.h5-dnd-body-container::-webkit-scrollbar {
+    box-sizing: border-box;
+}
+
+.h5-dnd-body-container::-webkit-scrollbar-thumb {
+    height: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #2c3237;
+}
+
+.h5-dnd-body-container::-webkit-scrollbar-thumb:hover {
+    background-color: #000;
+    cursor: pointer;
+}
+
+.h5-dnd-body-container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #4a4a4a;
+}
+
+
+/* webkit-scrollbar-button */
+
+.h5-dnd-body-container::-webkit-scrollbar-button {
+    background-color: #fff;
+}
+
+.h5-dnd-body-container::-webkit-scrollbar-arrow {
+    background-color: #f0f;
+    color: red;
+}
+
+* {
+    -webkit-scrollbar-arrow-color: #fff;
+    scrollbar-arrow-color: #fff;
+    -webkit-scrollbar-face-color: red;
+    scrollbar-face-color: red;
+}
+
+
+/* https://cdn.css-tricks.com/wp-content/uploads/2011/05/rad-scrollbars.gif */
+
+
+/* https://css-tricks.com/custom-scrollbars-in-webkit/
+ */
+
 .h5-dnd-body-container-small {
     width: calc(100% - 238px);
     margin-left: 5px;
@@ -787,83 +834,4 @@ div.h5-dnd-module-box:nth-of-type(1) {
 [data-print="print-title"] {
     color: #eee;
     font-weight: bold;
-}
-
-
-/* vertical & decrement */
-
-.h5-dnd-body-container::-webkit-scrollbar-button:vertical:decrement {
-    background: url(./img/arrow-up.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-.h5-dnd-body-container::-webkit-scrollbar-button:vertical:decrement:hover {
-    background: url(./img/arrow-up-hover.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-    ;
-    /* background-color: #3c4247; */
-}
-
-
-/* vertical & increment */
-
-.h5-dnd-body-container::-webkit-scrollbar-button:vertical:increment {
-    background: url(./img/arrow-down.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-.h5-dnd-body-container::-webkit-scrollbar-button:vertical:increment:hover {
-    background: url(./img/arrow-down-hover.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-
-/* horizontal & increment */
-
-.h5-dnd-body-container::-webkit-scrollbar-button:horizontal:increment {
-    background: url(./img/arrow-right.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-.h5-dnd-body-container::-webkit-scrollbar-button:horizontal:increment:hover {
-    background: url(./img/arrow-right-hover.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-
-/* horizontal & decrement */
-
-.h5-dnd-body-container::-webkit-scrollbar-button:horizontal:decrement {
-    background: url(./img/arrow-left.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-.h5-dnd-body-container::-webkit-scrollbar-button:horizontal:decrement:hover {
-    background: url(./img/arrow-left-hover.png) 4px 3px no-repeat;
-    background-color: #2c3237;
-}
-
-
-/* thumb */
-
-.h5-dnd-body-container::-webkit-scrollbar-thumb {
-    height: 10px;
-    background-color: #4a4a4a;
-}
-
-.h5-dnd-body-container::-webkit-scrollbar-thumb:hover {
-    background-color: #212529;
-    cursor: pointer;
-}
-
-.h5-dnd-body-container::-webkit-scrollbar-thumb:active {
-    background-color: #4a4a4a;
-    cursor: pointer;
-}
-
-
-/* track */
-
-.h5-dnd-body-container::-webkit-scrollbar-track {
-    background-color: #2c3237;
 }
